--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
   </button>
 </div>
 <p class="parrafoinicio">¡El sueño finalmente se hace realidad! <br>
-  Con la bendición de Dios y el amor de mi familia <br>
-  tengo el honor de invitarte a la celebración de <br>
+  Con la bendición de Dios y el amor <br> de mi familia 
+  tengo el honor de invitarte <br> a la celebración de
   Mis 15 años.
 
 </p>
@@ -148,6 +148,9 @@
 
 
 <img class="fondo" src="./imagenes/FONDO.png" alt="">
+<img class="fondo" src="./imagenes/FONDO.png" alt="">
+<img class="fondo" src="./imagenes/FONDO.png" alt="">
+
 
 <div class="cajafiesta">
   <img class="copas" src="./imagenes/COPAS.png" alt=""> 
@@ -156,7 +159,7 @@
   <br>
 <hr class="linea">
 
-<p class="parrafo2"><b>Horario:</b> 21:30 Hs <br> <br> <b>Lugar:</b> En mi casa. <br> <br>
+<p class="parrafo2"><b>Horario:</b> 21:30 Hs <br> <b>Lugar:</b>  Richeri - Moreno.<br> <br>
 </p>
 
 <div class="contenedor-boton">
@@ -167,11 +170,20 @@
 
 <hr class="linea2">
 
+<p class="parrafo3"><b>Vestimenta</b></p>
+<div class="div1">
+  <img class="percha" src="./imagenes/percha (1).png" alt="">
+
+<p class="parrafo4"><b>Casual e informal.</b>  <br> 
+  Le sugerimos ropa y calzado <br> cómodo  para una celebración <br> relajada y 
+  que puedas disfrutar. <br> <br>
+</p>
 </div>
+<hr class="linea2">
 
-
-
-
+<p class="parrafo5"><b>¿Venís?</b></p>
+<p class="parrafo6"> Tenes tiempo para confirmar <br> tu 
+  asistencia hasta el <br><b>29/12</b></p>
 
 
 
