--- a/index.html
+++ b/index.html
@@ -182,8 +182,33 @@
 <hr class="linea2">
 
 <p class="parrafo5"><b>¿Venís?</b></p>
-<p class="parrafo6"> Tenes tiempo para confirmar <br> tu 
-  asistencia hasta el <br><b>29/12</b></p>
+<p class="parrafo6"> Me llenaría de mucha<br> alegría que pudieras
+  acompañarme <br>en este día.
+</p>
+
+<a href="https://wa.me/+5491123653247" target="_blank">
+  <img class="whatsap" src="./imagenes/whatsapp.png" alt="">
+</a>
+<div class="item">
+  <div class="loader2"></div>
+</div>
+
+  <p class="parrafo8"> Te agradezco que me <br> confirmes  tu 
+    asistencia antes <br> del <b> 29/12</b> <br>Indicando nombre de cada <br>
+  integrante dek grupo familiar <br>para agregarte a la <br> lista de invitados.</p>
+
+
+  
+
+  <p class="parrafo7"><b>Aclará si necesitas menú especial.</b></p>
+
+
+
+
+
+
+
+
 
 
 
