--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
 <img class="fondo" src="./imagenes/FONDO.png" alt="">
 <img class="fondo" src="./imagenes/FONDO.png" alt="">
 <img class="fondo" src="./imagenes/FONDO.png" alt="">
+<img class="fondo" src="./imagenes/FONDO.png" alt="">
 
 
 <div class="cajafiesta">
@@ -176,17 +177,17 @@
 
 <p class="parrafo4"><b>Casual e informal.</b>  <br> 
   Le sugerimos ropa y calzado <br> cómodo  para una celebración <br> relajada y 
-  que puedas disfrutar. <br> <br>
+  que puedas disfrutar. <br> <br><b>Reservar el color verde.</b> <br>
 </p>
 </div>
 <hr class="linea2">
 
 <p class="parrafo5"><b>¿Venís?</b></p>
-<p class="parrafo6"> Me llenaría de mucha<br> alegría que pudieras
-  acompañarme <br>en este día.
+<p class="parrafo6"> Me llenaría de mucha<br> alegría que pudieras <br>
+  acompañarme en este día.
 </p>
 
-<a href="https://wa.me/+5491123653247" target="_blank">
+<a href="https://wa.me/+5491123653247?text=Nombre%20y%20apellido:%20%20%20¿Venís?%20php" target="_blank">
   <img class="whatsap" src="./imagenes/whatsapp.png" alt="">
 </a>
 <div class="item">
@@ -208,12 +209,20 @@
 
 
 
+  <p class="parrafo10"><b>¡Te espero!</b></p>
+
+<img class="mica" src="./imagenes/MICA.png" alt="">
+
+<img class="gif" src="./imagenes/f31ef3c89394188d9f4f1e2ba2ed3335.gif" alt="">
 
 
-
-
-
-
+<div class="box__copyright">
+  
+  <p>Sitio desarrollado por <b>digit invitaciones<b></p>
+      
+  <footer class="tecla">
+  
+  </footer>
 
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
