--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div class="caja-audio">
     <h5 class="Play">Dale Play</h5>
     <audio class="audio" controls autoplay>
-        <source src="./musica.mpeg" type="audio/mpeg">
+        <source src="./Loreen - Tattoo (Lyric Video - Español).mp3" type="audio/mpeg">
     </audio>
 </div>
 
@@ -187,7 +187,7 @@
   acompañarme en este día.
 </p>
 
-<a href="https://wa.me/+5491123653247?text=Nombre%20y%20apellido:%20%20%20¿Venís?%20php" target="_blank">
+<a href="https://wa.me/+5491123653247?text=Nombre%20y%20apellido:%20%20%20%20%20¿Venís?%" target="_blank">
   <img class="whatsap" src="./imagenes/whatsapp.png" alt="">
 </a>
 <div class="item">
