--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 <div class="div1">
   <img class="percha" src="./imagenes/percha (1).png" alt="">
 
-<p class="parrafo4"><b>Casual e informal.</b>  <br> 
+<p class="parrafo4"><b> Elegante Sport.</b>  <br> 
   Le sugerimos ropa y calzado <br> cómodo  para una celebración <br> relajada y 
   que puedas disfrutar. <br> <br><b>Reservar el color verde.</b> <br>
 </p>
